# seminar-pdm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  check.yaml  docker.yaml  tests.yaml
src/myproject9/: task.py
tests/: test_task.py
