[project]
name = "myproject9"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Evgeny A", email = "eadishchev@gmail.com"},
]
dependencies = [
    "pip>=24.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
lint.select = ["E", "F", "ERA", "T", "I"]
lint.ignore = ["E401"]
lint.fixable = ["F401", "I"]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests",
]
